[package]
name = "jetnet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
axum-server = {version="0.7.1", features=["tls-rustls"]}
dotenvy = "0.15.7"
k256 = "0.13.4"
rcgen = {version="0.13.1",features=["crypto"]}
serde = {version="1.0.215", features=["derive"]}
serde_json = "1.0.133"
tokio = {version="1.41.1", features=["full"]}
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["env-filter"]}

[workspace]
